Fix overall height gap due to deleting notification

--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -1,6 +1,6 @@
 .side_bar {
   width: $side_bar--width;
-  height: calc(100vh - #{$notification--height});
+  height: 100vh;
   background-color: #2f3e51;
   float: left;
   box-sizing: border-box;
